<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noise_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <com.v.smartassistant.outdoortool.CustomView.NoiseProgressView
        android:id="@+id/noise_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:circleBorderWidth="20dp"
        app:circlePadding="20dp"
        app:textSize="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/noise_progress"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/level1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/noise_level1"
            android:textColor="@color/noise_text_normal_color"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/level2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/noise_level2"
            android:textColor="@color/noise_text_normal_color"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/level3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/noise_level3"
            android:textColor="@color/noise_text_normal_color"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/level4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/noise_level4"
            android:textColor="@color/noise_text_normal_color"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/level5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/noise_level5"
            android:textColor="@color/noise_text_normal_color"
            android:textSize="18dp" />
    </LinearLayout>
</RelativeLayout>
